MDEV-14102 restore --remove-original options for mariabackup