mysql-test/suite/mariabackup/suite.pm
@@ -3,6 +3,7 @@ package My::Suite::MariaBackup;
 @ISA = qw(My::Suite);
 use My::Find;
 use File::Basename;
+use File::Which;
 use strict;
 
 return "Not run for embedded server" if $::opt_embedded_server;
@@ -26,6 +27,7 @@ $ENV{INNOBACKUPEX}= "$mariabackup_exe --innobackupex";
 sub skip_combinations {
   my %skip;
   $skip{'include/have_file_key_management.inc'} = 'needs file_key_management plugin'  unless $ENV{FILE_KEY_MANAGEMENT_SO};
+  $skip{'compress_qpress.test'}= 'needs qpress executable in PATH' unless which 'qpress';
   %skip;
 }
 
